--- a/README.Rmd
+++ b/README.Rmd
@@ -32,8 +32,14 @@ devtools::install_github("bayesiandemography/poputils")
 
 ## For end users
 
+### Data manipulation
+
+- `logit()`, `invlogit()` Logistic transformation.
+
 ### Life expectancy, life tables
 
+- `ex_to_lifetab_brass()` Use the Brass logit model to derive
+  life tables with specified life expectancies.
 - `lifeexp()` Calculate life expectancy from mortality rates.
 - `lifetab()` Calculate life tables from mortality rates.
 
@@ -53,6 +59,7 @@ devtools::install_github("bayesiandemography/poputils")
 
 - `check_no_overlap_colnums()` Check for argument clashes.
 - `groups_colnums()` Get column numbers for grouping variables.
+- `logit()`, `invlogit()` Logistic transformation.
 - `matrix_to_list_of_cols()`, `matrix_to_list_of_rows()` Split matrix.
 - `to_matrix()` Convert data frame to matrix.
 
