--- a/README.Rmd
+++ b/README.Rmd
@@ -35,23 +35,27 @@ devtools::install_github("bayesiandemography/poputils") ## development version
 
 ### Data manipulation
 
-- `logit()`, `invlogit()` Logistic transformation.
+- `logit()`, `invlogit()` Logistic transformation
+- `trim_01()` Trim values to interval (0, 1)
+- `rr3()` Randomly round to base 3
+
 
 ### Life expectancy, life tables
 
 - `ex_to_lifetab_brass()` Use the Brass logit model to derive
-  life tables with specified life expectancies.
-- `lifeexp()` Calculate life expectancy from mortality rates.
-- `lifetab()` Calculate life tables from mortality rates.
+  life tables with specified life expectancies
+- `lifeexp()` Calculate life expectancy from mortality rates
+- `lifetab()` Calculate life tables from mortality rates
+- `q0_to_m0()` Infant mortality
 
 ### Labels
 
-- `age_labels()` Create age labels.
-- `age_lower()`, `age_mid()`, `age_upper()` Limits and midpoints of age groups.
-- `combine_age()` Merge age group labels.
-- `reformat_age()` Reformat age group labels.
-- `reformat_sex()` Reformat sex labels.
-- `set_age_open()` Specify oldest age group.
+- `age_labels()` Create age labels
+- `age_lower()`, `age_mid()`, `age_upper()` Limits and midpoints of age groups
+- `combine_age()` Merge age group labels
+- `reformat_age()` Reformat age group labels
+- `reformat_sex()` Reformat sex labels
+- `set_age_open()` Specify oldest age group
 
 
 ## For developers
@@ -62,17 +66,16 @@ devtools::install_github("bayesiandemography/poputils") ## development version
 
 ### Data manipulation
 
-- `check_no_overlap_colnums()` Check for argument clashes.
-- `groups_colnums()` Get column numbers for grouping variables.
-- `logit()`, `invlogit()` Logistic transformation.
-- `matrix_to_list_of_cols()`, `matrix_to_list_of_rows()` Split matrix.
-- `to_matrix()` Convert data frame to matrix.
+- `check_no_overlap_colnums()` Check for argument clashes
+- `groups_colnums()` Get column numbers for grouping variables
+- `matrix_to_list_of_cols()`, `matrix_to_list_of_rows()` Split matrix
+- `to_matrix()` Convert data frame to matrix
 
 ### Labels
 
-- `age_group_type()` Infer type of age group label.
-- `check_age()` Validity checks for age group labels.
-- `find_label_female()`, `find_label_male()` Identify sex or gender labels.
-- `find_var_age()`, `find_var_sexgender()`, `find_var_time()` Identify age, sex/gender, time variables.
+- `age_group_type()` Infer type of age group label
+- `check_age()` Validity checks for age group labels
+- `find_label_female()`, `find_label_male()` Identify sex or gender labels
+- `find_var_age()`, `find_var_sexgender()`, `find_var_time()` Identify age, sex/gender, time variables
 
 
