tidying for cran submission

--- a/vignettes/poputils.Rmd
+++ b/vignettes/poputils.Rmd
@@ -27,7 +27,7 @@ knitr::opts_chunk$set(
 
 **poputils** provides tools for common tasks with demographic data. It has some distinctive features:
 
-- *Tidyverse compliance*. **poputils** tries to into [tidyverse](https://www.tidyverse.org) workflows. For instance, **poputils** functions use data frames for inputs and outputs, use [tidyselect](https://tidyselect.r-lib.org/reference/language.html) methods to specify variables, and follow tidyverse conventions for variable names.
+- *Tidyverse compliance*. **poputils** tries to into [tidyverse](https://tidyverse.org/) workflows. For instance, **poputils** functions use data frames for inputs and outputs, use [tidyselect](https://tidyselect.r-lib.org/reference/language.html) methods to specify variables, and follow tidyverse conventions for variable names.
 - *Uncertainty*. **poputils** handles uncertainty through the use of [rvecs](https://bayesiandemography.github.io/rvec/reference/rvec.html). An rvec is an object holding multiple draws from a distribution that behaves similarly to an ordinary R vector.
 - *Age and time labels*. **poputils** allows users to work directly with age and time labels, based on common set of methods.
 
