deprecated function ex_to_lifetab_brass

--- a/vignettes/poputils.Rmd
+++ b/vignettes/poputils.Rmd
@@ -25,13 +25,13 @@ knitr::opts_chunk$set(
 
 # Aims
 
-**poputils** provides tools for common tasks with demographic data. It has some distinctive features:
+`poputils` provides tools for common tasks with demographic data. It has some distinctive features:
 
-- *Tidyverse compliance*. **poputils** tries to into [tidyverse](https://tidyverse.org/) workflows. For instance, **poputils** functions use data frames for inputs and outputs, use [tidyselect](https://tidyselect.r-lib.org/reference/language.html) methods to specify variables, and follow tidyverse conventions for variable names.
-- *Uncertainty*. **poputils** handles uncertainty through the use of [rvecs](https://bayesiandemography.github.io/rvec/reference/rvec.html). An rvec is an object holding multiple draws from a distribution that behaves similarly to an ordinary R vector.
-- *Age and time labels*. **poputils** allows users to work directly with age and time labels, based on common set of methods.
+- *Tidyverse compliance*. `poputils` tries to into [tidyverse](https://tidyverse.org/) workflows. For instance, `poputils` functions use data frames for inputs and outputs, use [tidyselect](https://tidyselect.r-lib.org/reference/language.html) methods to specify variables, and follow tidyverse conventions for variable names.
+- *Uncertainty*. `poputils` handles uncertainty through the use of [rvecs](https://bayesiandemography.github.io/rvec/reference/rvec.html). An rvec is an object holding multiple draws from a distribution that behaves similarly to an ordinary R vector.
+- *Age and time labels*. `poputils` allows users to work directly with age and time labels, based on common set of methods.
 
-Some functions in **poputils** are designed for data analysts. Others are designed for programmers creating functions to be used by data analysts.
+Some functions in `poputils` are designed for data analysts. Others are designed for programmers creating functions to be used by data analysts.
 
 
 # Tools for data analysts
@@ -40,15 +40,15 @@ Some functions in **poputils** are designed for data analysts. Others are design
 
 ### Age
 
-Producers of demographic data follow a wide variety of styles for labeling age groups. **poputils** contains tools for parsing and manipulating these labels. 
+Producers of demographic data follow a wide variety of styles for labeling age groups. `poputils` contains tools for parsing and manipulating these labels. 
 
-Age label functions in **poputils** require that age labels belong to one of three types:
+Age label functions in `poputils` require that age labels belong to one of three types:
 
 - `"single"`. Single years of age, possibly including an open age group, eg `"0"`, `"81"`, `"17"`, `"100+"`. 
 - `"five"`. Five-year age groups, possibly including an open age group, eg `"0-4"`, `"80-84"`, `"15-19"`, `"100+"`.
 - `"lt"`. Life table age groups. Like `"five"`, but with the `"0-4"` age group split into `"0"` and `"1-4"`.
 
-Age labels created by **poputils** functions such as `age_labels()` follow a standard set of rules. Many age labels created using other rules can, however, be parsed by **poputils** functions,
+Age labels created by `poputils` functions such as `age_labels()` follow a standard set of rules. Many age labels created using other rules can, however, be parsed by `poputils` functions,
 
 ```{r}
 library(poputils)
@@ -225,16 +225,16 @@ inner_join(lin, ak, by = c("year", "gender")) |>
 
 ### Deriving life tables from life expectancies
 
-When working with very limited data, or when constructing simulations, it is sometimes helpful to be able to derive a full life table that is consistent with a given life expectancy. This is what function `ex_to_lifetab_brass()` does:
+When working with very limited data, or when constructing simulations, it is sometimes helpful to be able to derive a full life table that is consistent with a given life expectancy. This is what function `e0_to_lifetab_logit()` does:
 
 ```{r}
-target_ex <- data.frame(sex = "Female", ex = 51.4)
+target_e0 <- data.frame(sex = "Female", e0 = 51.4)
 
 west10 <- west_lifetab |>
   filter(level == 10) |>
   select(age, sex, lx)
 
-ex_to_lifetab_brass(target = target_ex,
+e0_to_lifetab_logit(target = target_e0,
                     standard = west10)
 ```
 
@@ -249,6 +249,8 @@ irn_fert |>
       by = c(area, time),
       denominator = 1000)      
 ```
+
+Function `tfr_to_asfr_scale()` is the fertility equivalent of `e0_to_lifetab_logit()`.
 
 
 ## Uncertainty
@@ -276,7 +278,7 @@ nzl_mort_rvec |>
 
 # Tools for developers
 
-**poputils** provides functions that developers creating packages to be used by demographers may find useful. 
+`poputils` provides functions that developers creating packages to be used by demographers may find useful. 
 
 ## Labels
 
@@ -291,23 +293,6 @@ Function `groups_colnums()` is helpful when implementing [tidyselect](https://ti
 `matrix_to_list_of_cols()` and `matrix_to_list_of_rows()` convert from matrices to lists of vectors. 
 
 `to_matrix()` converts a data frame to a matrix. The data frame potentially has more than two classification variables, and the rows and/or columns of the matrix can be formed from combinations of these variables.
-
-# Future developments
-
-## Definite
-
-- **Input checking** Sanity checks, and repairs, for inputs - eg ensuring that exposure is greater than 0 if deaths greater than 0.
-- **Stable populations** Given mortality and fertility profiles, generate the associated stable population.
-- **Time labels** Functions for dealing with time labels analogous to the existing ones dealing with age labels. The functions need to allow for one-month and one-quarter periods, and for 'exact times', ie dates.
-- **Multiple decrement life tables** Extend `lifetab()` and `lifeexp()` to allow for multiple decrements.
-- **Projection accounting** Functions to turn projected demographic rates, and an initial population, into a projected demographic account. Needs flexibility over dimensions included, and needs deterministic and probabilistic versions.
-- **Age, period, cohort labels** Functions to allocate events to age groups, periods, or cohorts, based on data on dates of event and dates of birth.
-
-
-## Possible
-
-- **Aggregation function** Using `dplyr::count()`, `dplyr::summarise()`, or `stats::aggregate()` to aggregate counts or rates in a data frame is awkward. Given that this is such a common operation, it might be worthwhile to do a replacement. 
-
 
 
 
